fixing line-height

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,10 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta property="og:title" content="James Amante - Portfolio" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://iamante.netlify.app" />
+    <meta property="og:image" content="https://iamante.netlify.app/images/open_graph_image.jpg" />
     <meta
       name="description"
       content="Personal Web site Portfolio created using Reactjs"
@@ -14,7 +18,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Englebert&display=swap" rel="stylesheet">
 
 
-    <title>James Amante - Portfolio</title>
+    <title>James Amante - Web developer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
