--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <meta property="og:image" content="https://iamante.netlify.app/images/open_graph_image.jpg" />
     <meta
       name="description"
-      content="Personal Web site Portfolio created using Reactjs"
+      content="Personal website portfolio created using Reactjs"
     />
     <!-- fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
