--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Englebert&display=swap" rel="stylesheet">
 
 
-    <title>James Amante - Web developer</title>
+    <title>James Amante - Software Engineer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
